--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,17 @@
         }
 
         #responsePlaceholder {
+            background-color: #f5f5f5;
+            color: #333;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            padding: 10px;
+            width: 90%;
+            max-height: 200px;
+            overflow-y: scroll;
+            font-family: monospace;
+            margin-top: 20px;
             white-space: pre-wrap;
-            /* Keeps the format of the JSON response */
         }
     </style>
 
