--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
 
         input[type="text"],
         input[type="password"] {
-            width: 100%;
-            padding: 12px 20px;
+            width: 380px;
+            padding: 12px;
             margin: 8px 0;
             box-sizing: border-box;
             background-color: #555;
@@ -44,18 +44,20 @@
             background-color: #005f73;
         }
 
-        #responsePlaceholder {
+        #responseWrapper {
+            border-radius: 4px;
             background-color: #f5f5f5;
             color: #333;
-            border: 1px solid #ccc;
-            border-radius: 4px;
             padding: 10px;
-            width: 90%;
-            max-height: 200px;
+            max-height: 600px;
             overflow-y: scroll;
             font-family: monospace;
             margin-top: 20px;
             white-space: pre-wrap;
+        }
+
+        #responsePlaceholder {
+            max-width: 90%;
         }
     </style>
 
